styles.css
*, *::after, *::before {
    box-sizing: border-box;
}

:root {
    font-family:'Roboto', sans-serif;

    --darkgrey: rgb(45, 46, 52);
    --lightgrey: rgb(56, 58, 62);
    --cornsilk: rgb(203, 205, 224);
    --lightsilk: rgb(232, 232, 232);

    --gold: rgb(247, 210, 0);
    --blue: rgb(71, 135, 255);
}

body{
    padding: 0;
    margin: 0;
}

/* Header */

header {
    height: 100px;
    width: 100%;
    margin: 0;
    background: var(--darkgrey);
    display: grid;
    grid-template-columns: 50px 1fr 50px;
    align-items: center;
}

svg path{
    fill: var(--cornsilk);
}

.bookicon{
    justify-self: right;
}

.title {
    color: var(--cornsilk);
    padding-left: 5px;
    padding-bottom: 3px;
}

/* Main */

.main {
    height: 87vh;
    display: grid;
    grid-template-rows: 60px 1fr 50px;
}

.btn-container {
    background: var(--lightgrey);
    width: 1fr;
    display: flex;
    justify-content: center;
    align-items: end;
}

.grid {
    background: var(--lightgrey);
    height: 1fr;
    width: 1fr;
}

.add_book {
    height: 50px;
    width: 120px;
    border-radius: 70px;
    border-style: none;
    font-size: 20px;
}



/* Footer */


.footer {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    width: 100%;
    background-color: var(--lightgrey);
    color: var(--cornsilk);
  }


  /* Modal */

  .modal {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(0);
    border-radius: 50px;
    height: 350px;
    width: 250px;
    z-index: 10;

    background: var(--darkgrey);
    color: var(--cornsilk);
  }

  .modal.active {
    transform: translate(-50%, -50%) scale(1);
  }

  #addBookForm {
    display: grid;
    width: 100%;
    grid-template-rows: repeat(6, 20%);
    gap: 10px;
    justify-content: center;
    padding-top: 15px;
  }

  #addBookForm>h3 {
    justify-self: center;
  }

  #addBookForm>input {
    border-radius: 10px;
    border-style: none;
  }

  #addBookForm>button {
    border-radius: 50px;
    border-style: none;
  }

/* Overlay */

#overlay {
    position: fixed;
    opacity: 0;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.6);
    pointer-events: none;
}

#overlay.active {
    pointer-events: all;
    opacity: 1;
}

